re PR middle-end/23290 (Layout changed for structure with single complex field)

PR middle-end/23290
	* stor-layout.c (compute_record_mode): For records with a single
	field, actually check the field's mode size against the type size.

From-SVN: r104171